--- a/posto/posto/Base.lproj/Main.storyboard
+++ b/posto/posto/Base.lproj/Main.storyboard
@@ -372,19 +372,9 @@
                                     <rect key="frame" x="219" y="130" width="67" height="30"/>
                                 </variation>
                                 <connections>
-                                    <outlet property="delegate" destination="frC-hj-kNo" id="5CJ-Yk-zGO"/>
+                                    <outlet property="delegate" destination="frC-hj-kNo" id="l6e-Ul-9De"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ETANOL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10d-gF-dQZ">
-                                <rect key="frame" x="61" y="212" width="100" height="21"/>
-                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="20"/>
-                                <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="61" y="243" width="129" height="21"/>
-                                </variation>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="GASOLINA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LsU-rg-nq4">
                                 <rect key="frame" x="214" y="212" width="100" height="21"/>
                                 <color key="backgroundColor" red="0.96870988609999997" green="0.77573884709999996" blue="0.107850476" alpha="1" colorSpace="calibratedRGB"/>
@@ -395,18 +385,6 @@
                                     <rect key="frame" x="191" y="243" width="123" height="21"/>
                                 </variation>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2SP-wo-7az">
-                                <rect key="frame" x="117" y="268" width="140" height="131"/>
-                                <state key="normal" backgroundImage="vel4.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="103" y="272" width="169" height="166"/>
-                                </variation>
-                                <connections>
-                                    <action selector="buttonCalculate:" destination="frC-hj-kNo" eventType="touchUpInside" id="gEG-CT-ehL"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8VQ-ET-DcF">
                                 <rect key="frame" x="100" y="161" width="18" height="34"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
@@ -431,26 +409,53 @@
                                 <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="61" y="454" width="253" height="128"/>
+                                    <rect key="frame" x="61" y="492" width="253" height="128"/>
                                 </variation>
+                                <connections>
+                                    <outlet property="delegate" destination="frC-hj-kNo" id="dIw-gZ-axP"/>
+                                </connections>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GCJ-kO-hYo">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" backgroundImage="vel4.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="117" y="272" width="144" height="144"/>
+                                </variation>
+                                <connections>
+                                    <action selector="buttonCalculate:" destination="frC-hj-kNo" eventType="touchUpInside" id="vYJ-yY-E18"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ETANOL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10d-gF-dQZ">
+                                <rect key="frame" x="61" y="212" width="100" height="21"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="20"/>
+                                <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="61" y="243" width="129" height="21"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="Ugm-da-TYi"/>
+                                <exclude reference="GCJ-kO-hYo"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="Ugm-da-TYi"/>
+                                <include reference="GCJ-kO-hYo"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
                         <outlet property="textGasValue" destination="Gmk-Bf-k6f" id="gyg-iA-wB3"/>
-                        <outlet property="textGnvOrEtnValue" destination="kPA-jp-vMb" id="e2d-ds-4ri"/>
-                        <outlet property="textResult" destination="Ugm-da-TYi" id="wGN-Yy-F17"/>
+                        <outlet property="textGnvOrEtnValue" destination="kPA-jp-vMb" id="XeL-NZ-qhX"/>
+                        <outlet property="textResult" destination="Ugm-da-TYi" id="7O9-Q8-tn8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zFx-XL-hXW" userLabel="First Responder" sceneMemberID="firstResponder"/>
