--- a/posto/posto/Base.lproj/Main.storyboard
+++ b/posto/posto/Base.lproj/Main.storyboard
@@ -428,18 +428,6 @@
                                     <outlet property="delegate" destination="frC-hj-kNo" id="dIw-gZ-axP"/>
                                 </connections>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GCJ-kO-hYo">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <state key="normal" backgroundImage="vel4">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="117" y="272" width="144" height="144"/>
-                                </variation>
-                                <connections>
-                                    <action selector="buttonCalculate:" destination="frC-hj-kNo" eventType="touchUpInside" id="vYJ-yY-E18"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ETANOL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10d-gF-dQZ">
                                 <rect key="frame" x="61" y="212" width="100" height="21"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -450,18 +438,30 @@
                                     <rect key="frame" x="61" y="243" width="129" height="21"/>
                                 </variation>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oy7-zG-Ymb">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" backgroundImage="vel4.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="117" y="272" width="144" height="133"/>
+                                </variation>
+                                <connections>
+                                    <action selector="buttonCalculate:" destination="frC-hj-kNo" eventType="touchUpInside" id="JTo-gX-kmh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="Ugm-da-TYi"/>
-                                <exclude reference="GCJ-kO-hYo"/>
+                                <exclude reference="oy7-zG-Ymb"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="Ugm-da-TYi"/>
-                                <include reference="GCJ-kO-hYo"/>
+                                <include reference="oy7-zG-Ymb"/>
                             </mask>
                         </variation>
                     </view>
@@ -482,6 +482,6 @@
         <image name="gas_station" width="256" height="256"/>
         <image name="gas_station1" width="512" height="512"/>
         <image name="tools" width="256" height="256"/>
-        <image name="vel4" width="500" height="500"/>
+        <image name="vel4.png" width="500" height="500"/>
     </resources>
 </document>
