--- a/posto/posto/Base.lproj/Main.storyboard
+++ b/posto/posto/Base.lproj/Main.storyboard
@@ -43,14 +43,14 @@
                                 </items>
                             </navigationBar>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I0J-UT-TWr">
-                                <rect key="frame" x="0.0" y="139" width="375" height="162"/>
+                                <rect key="frame" x="0.0" y="126" width="375" height="162"/>
                                 <connections>
                                     <outlet property="dataSource" destination="URe-M8-4P9" id="6ya-pU-je3"/>
                                     <outlet property="delegate" destination="URe-M8-4P9" id="HbD-ic-Fi4"/>
                                 </connections>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tipo de uso" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2c-GL-FSX">
-                                <rect key="frame" x="141" y="100" width="90.5" height="21"/>
+                                <rect key="frame" x="142" y="100" width="91" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="yjK-M6-hfj"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="58" id="z0W-7Y-p0U"/>
@@ -60,25 +60,25 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quilometragem" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9RI-ji-MjR">
-                                <rect key="frame" x="41" y="332" width="118" height="21"/>
+                                <rect key="frame" x="41" y="319" width="118" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Última troca de óleo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJs-Yq-snN">
-                                <rect key="frame" x="41" y="373" width="155" height="20.5"/>
+                                <rect key="frame" x="41" y="360" width="155" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Última revisão" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6G-eD-y4c">
-                                <rect key="frame" x="41" y="412" width="109" height="20.5"/>
+                                <rect key="frame" x="41" y="399" width="109" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Km" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VAG-FW-RSu">
-                                <rect key="frame" x="262" y="369" width="97" height="30"/>
+                                <rect key="frame" x="262" y="356" width="97" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="97" id="g1q-mG-iL0"/>
                                 </constraints>
@@ -89,7 +89,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Km" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Gr-cJ-PXJ">
-                                <rect key="frame" x="262" y="408" width="97" height="30"/>
+                                <rect key="frame" x="262" y="395" width="97" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="97" id="PZ1-1E-qOw"/>
                                 </constraints>
@@ -100,7 +100,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Km" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vZj-yH-Lj9">
-                                <rect key="frame" x="262" y="328" width="97" height="30"/>
+                                <rect key="frame" x="262" y="315" width="97" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="97" id="oha-4s-XvB"/>
                                 </constraints>
@@ -118,14 +118,14 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="UJs-Yq-snN" firstAttribute="top" secondItem="VAG-FW-RSu" secondAttribute="top" constant="4" id="0Fm-gu-FYT"/>
-                            <constraint firstAttribute="centerX" secondItem="P2c-GL-FSX" secondAttribute="centerX" constant="0.5" id="21n-zw-uWS"/>
+                            <constraint firstAttribute="centerX" secondItem="P2c-GL-FSX" secondAttribute="centerX" id="21n-zw-uWS"/>
                             <constraint firstItem="UJs-Yq-snN" firstAttribute="top" secondItem="9RI-ji-MjR" secondAttribute="bottom" constant="20" id="4gI-ep-rCt"/>
                             <constraint firstItem="Q6G-eD-y4c" firstAttribute="top" secondItem="4Gr-cJ-PXJ" secondAttribute="top" constant="4" id="55M-UP-kPw"/>
                             <constraint firstAttribute="centerX" secondItem="I0J-UT-TWr" secondAttribute="centerX" id="Jlc-rj-1hb"/>
                             <constraint firstItem="I0J-UT-TWr" firstAttribute="width" secondItem="f5u-Nm-SNd" secondAttribute="width" id="MIb-Pa-6qP"/>
                             <constraint firstItem="9RI-ji-MjR" firstAttribute="leading" secondItem="f5u-Nm-SNd" secondAttribute="leadingMargin" constant="25" id="Nca-rm-Sbe"/>
                             <constraint firstItem="Q6G-eD-y4c" firstAttribute="leading" secondItem="f5u-Nm-SNd" secondAttribute="leadingMargin" constant="25" id="OYI-xF-vEX"/>
-                            <constraint firstItem="I0J-UT-TWr" firstAttribute="top" secondItem="P2c-GL-FSX" secondAttribute="bottom" constant="18" id="OzM-kG-FPV"/>
+                            <constraint firstItem="I0J-UT-TWr" firstAttribute="top" secondItem="P2c-GL-FSX" secondAttribute="bottom" constant="5" id="OzM-kG-FPV"/>
                             <constraint firstItem="VAG-FW-RSu" firstAttribute="trailing" secondItem="f5u-Nm-SNd" secondAttribute="trailingMargin" id="PRq-fD-Fk3"/>
                             <constraint firstItem="P2c-GL-FSX" firstAttribute="top" secondItem="fCb-fO-Kh4" secondAttribute="bottom" constant="36" id="Re9-kY-ruv"/>
                             <constraint firstItem="vZj-yH-Lj9" firstAttribute="trailing" secondItem="f5u-Nm-SNd" secondAttribute="trailingMargin" id="WUs-aM-xqT"/>
@@ -325,7 +325,7 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="k7o-vp-QUL">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="k7o-vp-QUL">
                                 <rect key="frame" x="16" y="177" width="343" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -335,7 +335,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2ZT-ZV-F5K">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2ZT-ZV-F5K">
                                 <rect key="frame" x="16" y="334" width="343" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
